--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,7 @@ build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
   - C:\projects\julia\bin\julia -e "versioninfo();
-      Pkg.clone(pwd(), \"ReadWriteLock\"); Pkg.build(\"ReadWriteLock\")"
+      Pkg.clone(pwd(), \"ReadWriteLocks\"); Pkg.build(\"ReadWriteLocks\")"
 
 test_script:
-  - C:\projects\julia\bin\julia --check-bounds=yes -e "Pkg.test(\"ReadWriteLock\")"
+  - C:\projects\julia\bin\julia --check-bounds=yes -e "Pkg.test(\"ReadWriteLocks\")"
